✨Feat: 커서 기반 조회 추가 및 예외처리 수정 - StoreRepository에 soft-delete 적용 및 Slice 기반 커서 페이징 쿼리 추가   - findAllByCursor(cursor, pageable)   - findAllByCategoryAndCursor(categoryId, cursor, pageable) - StoreQueryService에서 Slice 기반 가게 목록 조회 서비스 구현   - getAllStores(cursor, size)   - getStoresByCategory(categoryId, cursor, size) - StoreListResponseDTO에 createdAt 필드 추가 및 getCreatedAt() 문제 해결 - 전체 조회, 카테고리별 조회 시 nextCursor 반환 로직 반영 - 커서 페이징 Slice 구조에 맞게 repository → service → dto 전체 연결 - StoreListResponseDTO 구조 변경 (createdAt 추가) - Service 예외처리수정: 기존 정의되어있는 StoreException로 수정