@@ -4,11 +4,14 @@ import com.example.cloudfour.peopleofdelivery.domain.store.dto.StoreResponseDTO;
 import com.example.cloudfour.peopleofdelivery.domain.store.entity.Store;
 import com.example.cloudfour.peopleofdelivery.domain.store.repository.StoreRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,26 +19,44 @@ public class StoreQueryService {
 
     private final StoreRepository storeRepository;
 
-    // 전체 가게 목록 조회
-    public List<StoreResponseDTO.StoreListResponseDTO> getAllStores() {
-        List<Store> stores = storeRepository.findAll();
-        return stores.stream()
+    public StoreResponseDTO.StoreCursorListResponseDTO getAllStores(LocalDateTime cursor, int size) {
+        LocalDateTime baseTime = (cursor != null) ? cursor : LocalDateTime.now();
+
+        Pageable pageable = PageRequest.of(0, size);
+        Slice<Store> storeSlice = storeRepository.findAllByCursor(baseTime, pageable);
+
+        List<StoreResponseDTO.StoreListResponseDTO> storeList = storeSlice.getContent().stream()
                 .map(StoreResponseDTO.StoreListResponseDTO::from)
-                .collect(Collectors.toList());
+                .toList();
+
+        LocalDateTime nextCursor = storeSlice.hasNext()
+                ? storeList.get(storeList.size() - 1).getCreatedAt()
+                : null;
+
+        return StoreResponseDTO.StoreCursorListResponseDTO.of(storeList, nextCursor);
     }
 
-    // 카테고리별 가게 목록 조회
-    public List<StoreResponseDTO.StoreListResponseDTO> getStoresByCategory(UUID categoryId) {
-        List<Store> stores = storeRepository.findAllByStoreCategoryId(categoryId);
-        return stores.stream()
+    public StoreResponseDTO.StoreCursorListResponseDTO getStoresByCategory(UUID categoryId, LocalDateTime cursor, int size) {
+        LocalDateTime baseTime = (cursor != null) ? cursor : LocalDateTime.now();
+
+        Pageable pageable = PageRequest.of(0, size);
+        Slice<Store> storeSlice = storeRepository.findAllByCategoryAndCursor(categoryId, baseTime, pageable);
+
+        List<StoreResponseDTO.StoreListResponseDTO> storeList = storeSlice.getContent().stream()
                 .map(StoreResponseDTO.StoreListResponseDTO::from)
-                .collect(Collectors.toList());
+                .toList();
+
+        LocalDateTime nextCursor = storeSlice.hasNext()
+                ? storeList.get(storeList.size() - 1).getCreatedAt()
+                : null;
+
+        return StoreResponseDTO.StoreCursorListResponseDTO.of(storeList, nextCursor);
     }
 
-    // 특정 가게 상세 정보 조회
     public StoreResponseDTO.StoreDetailResponseDTO getStoreById(UUID storeId) {
         Store store = storeRepository.findById(storeId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 가게를 찾을 수 없습니다."));
         return StoreResponseDTO.StoreDetailResponseDTO.from(store);
     }
 }
+
